# run_and_schedule_to_survive

./: .gitignore  .gitlab-ci.yml  README.md  environment.yml  pyproject.toml  req.txt  requirements.txt
survival_tests/: README.md  curves.py  evaluation.py  evaluation_of_schedules.py  evaluation_of_train_test_split.py  optimization.py  run.py  run.sh  run_experiments.py  run_schedule.py  run_scheduleee.py  save_results.py  schedule.py  survival_curves.py
survival_tests/approaches/: schedule.py
survival_tests/approaches/survival_forests/: auto_surrogate.py
survival_tests/notebooks/: create_survival_curves.ipynb  create_survival_curves2.ipynb  run_optimization.ipynb  solutions.json  tabulate_results.ipynb
survival_tests/notebooks/outputs/: CPMP-2015_survival_results.csv  CPMP-2015_termination_results.csv  CSP-Minizinc-Time-2016_survival_results.csv  CSP-Minizinc-Time-2016_termination_results.csv  GRAPHS-2015_survival_results.csv  GRAPHS-2015_termination_results.csv  MIP-2016_survival_results.csv  MIP-2016_termination_results.csv  QBF-2011_survival_results.csv  QBF-2011_termination_results.csv  TSP-LION2015_survival_results.csv  TSP-LION2015_termination_results.csv
survival_tests/results/: visualization.ipynb
survival_tests/tests/: test_evaluation_of_schedules.py  test_optimization.py  test_save_results.py  test_schedules.py
