[tool.poetry]
name = "bachelorthesis-env"
version = "0.1.0"
description = ""
authors = ["Tom Körner <t.koerner@campus.lmu.de>"]
readme = "README.md"
packages = [{include = "algorithm_survival_analysis"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipython = "7.13.0"
appnope = "^0.1.3"
attrs = "19.3.0"
backcall = "0.1.0"
bleach = "3.1.4"
cloudpickle = "1.2.2"
cvxopt = "^1.3.0.1"
cvxpy = "^1.3.1"
certifi = "2020.6.20"
cycler = "0.10.0"
decorator = "4.4.1"
defusedxml = "0.6.0"
dill = "0.3.1.1"
ecos = "2.0.7.post1"
entrypoints = "0.3"
fastcache = "1.1.0"
future = "0.18.2"
glib = "^1.0.0"
hyperopt = "0.2.2"
ipykernel = "5.1.4"
ipython-genutils = "0.2.0"
ipywidgets = "7.5.1"
jedi = "0.17.0"
jsonschema = "3.2.0"
jupyter = "1.0.0"
jupyter-client = "6.1.3"
jupyter-console = "6.1.0"
jupyter-core = "4.6.3"
kiwisolver = "1.1.0"
markupsafe = "1.1.1"
mistune = "0.8.4"
mysql-connector-python = "8.0.18"
nbconvert = "5.6.1"
pyzmq = "^25.0.2"
qtconsole = "4.7.4"
qtpy = "1.9.0"
seaborn = "0.9.0"
send2trash = "1.5.0"
six = "1.13.0"
terminado = "0.8.3"
testpath = "0.4.4"
torchvision = "^0.15.1"
tornado = "6.0.3"
tqdm = "4.42.1"
traitlets = "4.3.3"
wcwidth = "0.1.9"
webencodings = "0.5.1"
wheel = "0.33.6"
widgetsnbextension = "3.5.1"
zipp = "3.1.0"
ax-platform = "0.1.9"
botorch = "0.2.1"
gpytorch = "1.0.1"
jinja2 = "2.11.1"
liac-arff = "2.4.0"
pandas = "^2.0.1"
plotly = "^5.14.1"
pytz = "^2023.3"
retrying = "^1.3.4"
scikit-survival = "^0.20.0"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
importlib-metadata = "^6.6.0"
pyyaml = "^6.0"
threadpoolctl = "^3.1.0"
mlxtend = "^0.22.0"
geneticalgorithm2 = "^6.8.5"
oppoppopinit = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
